--- a/scss/index.scss
+++ b/scss/index.scss
@@ -50,7 +50,8 @@ html {
         padding: 0 0 0 0.1rem;
       }
 
-      input {
+      input,
+      select {
         padding: 0.3rem 0.5rem;
         border: 1px solid #ccc;
         border-radius: 0.2rem;
