--- a/scss/index.scss
+++ b/scss/index.scss
@@ -56,6 +56,7 @@ html {
         border: 1px solid #ccc;
         border-radius: 0.2rem;
         box-shadow: 0.1rem 0.1rem 0.1rem #ccc;
+        color: #1b1b1b;
       }
 
       button {
