and the most final fix

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -27,9 +27,11 @@ aside {
 
 input,
 select,
+option,
 button,
 textarea {
   font-family: inherit;
+  color: inherit;
 }
 button {
   background-color: transparent;
